manifests/it-tools/it-tools.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: it-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
    spec:
      containers:
        - name: it-tools
          image: corentinth/it-tools:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
            requests:
              cpu: "10m"
              memory: "32Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: it-tools
