manifests/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: it-tools
