manifests/it-tools/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-https
  namespace: it-tools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tools.smeyer.ca`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
  tls:
    secretName: wildcard-smeyer-ca-tls # Matching your existing wildcard secret
